.xmonad/xmonad.errors
$ ghc --make xmonad.hs -i -ilib -fforce-recomp -main-is main -v0 -outputdir /home/dq/.xmonad/build-x86_64-linux -o /home/dq/.xmonad/xmonad-x86_64-linux

lib/Colors/DoomOne.hs:3:1: error:
    Could not find module ‘XMonad’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
  |
3 | import XMonad
  | ^^^^^^^^^^^^^
